# inkwell

./: .credo.exs  .formatter.exs  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  inkwell  mise.toml  mix.exs  paseo.json
.claude/skills/ash-framework/: SKILL.md
.claude/skills/elixir-core/: SKILL.md
.claude/skills/mdex/: SKILL.md
.github/: cask-template.rb  formula-template.rb
.github/demo/: live-reload.md  showcase.md
.github/workflows/: auto-tag.yml  ci.yml  release.yml
Formula/: inkwell.rb
assets/js/: app.js
assets/js/hooks/: diff_view.js  (+10 more)
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: inkwell.ex  inkwell_web.ex
lib/inkwell/: application.ex  cli.ex  daemon.ex  doc_nav.ex  file_dialog.ex  git_repo.ex  github.ex  history.ex  library.ex  release.ex  renderer.ex  repo.ex  router.ex  search.ex  settings.ex  static_assets.ex  update_checker.ex  updater.ex  watcher.ex  ws_handler.ex
lib/inkwell_web/: endpoint.ex  picker_component.ex  router.ex  telemetry.ex
priv/static/: app.css  app.js  markdown-wide.css
scripts/: build-desktop.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  update_ui.rs
test/: test_helper.exs
test/fixtures/: kitchen-sink.md
test/inkwell/: application_test.exs  bump_test.exs  cli_parser_test.exs  cli_test.exs  daemon_test.exs  doc_nav_test.exs  file_dialog_test.exs  git_repo_test.exs  history_test.exs  release_test.exs  renderer_test.exs  router_test.exs  search_test.exs  settings_test.exs  update_checker_test.exs  updater_test.exs  watcher_test.exs  ws_handler_test.exs
test/inkwell_web/: static_assets_test.exs
test/support/: conn_case.ex  data_case.ex
(+42 files in other folders)
